php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #18868 Ref : Bug #9469 HAVE_REALPATH not being checked : not yet fixed in TSRM
Submitted: 2002-08-12 12:11 UTC Modified: 2002-11-06 12:08 UTC
From: php_bug at caesura dot co dot uk Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.2.2 OS: AIX 3.2.5
Private report: No CVE-ID: None
 [2002-08-12 12:11 UTC] php_bug at caesura dot co dot uk
Ref : Bug #9469 HAVE_REALPATH not being checked : not yet fixed in TSRM?

System : 
AIX 3.2.5, apache 1.3.12, GNU Make version 3.76.1, gcc version 2.8.1

I configured and built php 4.2.2 in its own directory ok (my "gnu_make" is to differentiate from the IBM one) :

% ./configure  --with-apache=/usr/local/source/apache_1.3.12
% gnu_make
% gnu_make install
% cd ../apache_1.3.12
./configure --prefix=/www --activate module=src/modules/php4/libphp4.a

but ...

% gnu_make 

...
gcc  -DAIX=30 -DNEED_RLIM_T -U__STR__ -I/usr/local/source/php-4.2.2 -I/usr/local/source/php-4.2.2/main -I/usr/local/source/php-4.2.2/main -I/usr/local/source/php-4.2.2/Zend -I/usr/local/source/php-4.2.2/Zend -I/usr/local/source/php-4.2.2/TSRM -I/usr/local/source/php-4.2.2/TSRM -I/usr/local/source/php-4.2.2 -DUSE_EXPAT -I./lib/expat-lite -DNO_DL_NEEDED `./apaci`    \
      -o httpd buildmark.o modules.o modules/php4/libphp4.a modules/standard/libstandard.a main/libmain.a ./os/unix/libos.a ap/libap.a  lib/expat-lite/libexpat.a  -Lmodules/php4 -L../modules/php4 -L../../modules/php4 -lmodphp4   -lm   
collect2: ld returned 8 exit status
0706-317 ERROR: Unresolved or undefined symbols detected:
                 Symbols in error (followed by references) are
                 dumped to the load map.
                 The -bloadmap:<filename> option will create a load map.
.realpath
gnu_make[2]: *** [target_static] Error 1
gnu_make[2]: Leaving directory `/usr/local/source/apache_1.3.12/src'
gnu_make[1]: *** [build-std] Error 2
gnu_make[1]: Leaving directory `/usr/local/source/apache_1.3.12'
gnu_make: *** [build] Error 2

Do TSRM/tsrm_virtual_cwd.c/h (and others?) need to be updated with a check for HAVE_REALPATH.  It seems AIX 3.2.5 does not have realpath(), just like Win32 and BEOS ...


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-11-06 12:08 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 19:00:01 2026 UTC