Instead of checking whether realpath exists based on OS. Use the HAVE_REALPATH define, which is set if realpath() is avaliable. This patch also resolves bug #18868.