main/safe_mode.c
@@ -31,10 +31,6 @@
 #include "SAPI.h"
 #include "php_globals.h"
 
-#ifdef __BEOS__
-#define realpath(x,y) strcpy(y,x)
-#endif
-
 /*
  * php_checkuid
  *
